# benri-stream

./: .env.example  .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.worker  README.md  diagrams-system.txt  diagrams-task-system.txt  docker-compose.yml  nginx.conf
.claude/: CLAUDE.md
.claude/agents/: security-auditor.md
.claude/skills/bug-fix/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/infra-change/: SKILL.md
.claude/skills/new-entity/: SKILL.md
.claude/skills/spec-feature/: SKILL.md
.claude/skills/spec-review/: SKILL.md
.spec/: SPEC_GUIDE.md
.spec/architecture/: system-architecture.md
.spec/architecture/backend/: data-store.md  error-handling.md  observability.md  storage-layout.md  task-system.md  testing.md  transcoding.md  workspace-crates.md
.spec/architecture/frontend/: spa.md
.spec/business-spec/: SPEC_GUIDE.md
.spec/business-spec/task-system/: task-catalog.md
.spec/business-spec/user-stories/: anonymous-user.md
.spec/business-spec/video/: video.md  video.ui.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  middleware.rs
crates/api/src/handlers/: video.rs
crates/api/tests/: complete_upload_test.rs  get_video_test.rs  initiate_upload_test.rs
crates/api/tests/common/: mod.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/services/: mod.rs
crates/application/src/usecases/video/: cleanup_stale_videos.rs  complete_upload.rs  delete_video.rs  get_video_by_token.rs  get_video_status.rs  initiate_upload.rs  mod.rs  process_video.rs
crates/application/tests/: cleanup_stale_videos_test.rs  complete_upload_test.rs  delete_video_test.rs  get_video_by_token_test.rs  get_video_status_test.rs  initiate_upload_test.rs  process_video_test.rs
crates/application/tests/common/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/ports/: distributed_lock.rs  error.rs  mod.rs  storage.rs  task.rs  transaction.rs  transcoder.rs  unit_of_work.rs  video.rs
crates/domain/src/task/: mod.rs  result.rs  scheduler.rs  trace_context.rs
crates/domain/src/task/metadata/: cleanup_stale_videos.rs  delete_video.rs  mod.rs  process_video.rs
crates/domain/src/video/: mod.rs
crates/domain/tests/: task_scheduler_test.rs  task_test.rs  video_test.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: bootstrap.rs  config.rs  lib.rs  testing.rs
crates/infrastructure/src/postgres/: mod.rs  task_repository.rs  transaction.rs  unit_of_work.rs  video_repository.rs
crates/infrastructure/src/redis/: distributed_lock.rs  mod.rs  task_consumer.rs  task_publisher.rs
crates/infrastructure/src/storage/: s3_client.rs
crates/infrastructure/src/transcoder/: gstreamer.rs  hls_uploader.rs  mod.rs  quality.rs
crates/infrastructure/tests/: quality_test.rs  redis_queue_test.rs  s3_client_test.rs  task_repository_test.rs  transaction_test.rs  video_repository_test.rs
crates/worker/: Cargo.toml
crates/worker/src/: consumer.rs  lib.rs  main.rs  poller.rs  recovery.rs  system_checker.rs
crates/worker/src/handlers/: cleanup_stale.rs  delete_video.rs  mod.rs  process_video.rs
crates/worker/tests/: handler_dispatch_test.rs
frontend/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/: api.js
frontend/src/routes/: +page.svelte
frontend/src/routes/v/[shareToken]/: +page.svelte
migrations/: 001_create_videos.sql  001_init.sql  002_create_tasks.sql
scratch/: jd.md  test.md
