[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
domain.workspace = true
application.workspace = true
infrastructure.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sqlx.workspace = true

[dev-dependencies]
infrastructure = { workspace = true, features = ["test-support"] }
http-body-util = "0.1"
chrono.workspace = true
aws-sdk-s3.workspace = true
