[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
domain.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
sqlx.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
redis.workspace = true
metrics.workspace = true
