[package]
name = "worker"
version.workspace = true
edition.workspace = true

[dependencies]
domain.workspace = true
application.workspace = true
infrastructure.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
metrics.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlx.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
redis.workspace = true
serde_json.workspace = true
