[package]
name = "worker"
version.workspace = true
edition.workspace = true

[dependencies]
domain.workspace = true
application.workspace = true
infrastructure = { workspace = true, features = ["gstreamer"] }
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
metrics.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde_json.workspace = true
# Required for type resolution at the bootstrap call sites
# (Result<PgPool, sqlx::Error>, redis::Client). aws-sdk-s3 and
# aws-config are no longer direct deps — `create_s3_client` hides them.
sqlx.workspace = true
redis.workspace = true

[dev-dependencies]
infrastructure = { workspace = true, features = ["test-support", "gstreamer"] }
aws-sdk-s3.workspace = true
uuid.workspace = true
serde.workspace = true
